GNOME Bugzilla – Bug 771278
udpsrc: Compilation error on NetBSD
Last modified: 2016-09-30 10:49:54 UTC
Created attachment 335342 [details] [review] Patch fixing the problem gst-plugins-good-1.8.3 does not build on NetBSD, because it wants to access the pkginfo->ipi_spec_dst member which does not exist.
commit 22d6c7f10634532cc7ad185622b53d2ec1f5cc76 Author: Thomas Klausner <tk@giga.or.at> Date: Mon Sep 12 09:02:00 2016 +0000 udpsrc: Fix compilation on NetBSD https://bugzilla.gnome.org/show_bug.cgi?id=771278