udpsrc: Fix compilation on NetBSD

https://bugzilla.gnome.org/show_bug.cgi?id=771278